--- a/03-frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
@@ -1,29 +1,19 @@
 <table class="table">
     <thead class="table-dark">
         <tr>
-            <th>SKU</th>
+            <th>Image</th>
             <th>Name</th>
-            <th>Description</th>
-            <th>Unit Price</th>
-            <th>Image URL</th>
-            <th>Active</th>
+            <th>Price</th>
             <th>Units in stock</th>
-            <th>Date Created</th>
-            <th>Last Updated</th>
         </tr>
     </thead>
 
     <tbody>
         <tr *ngFor="let tempProduct of data">
-            <td>{{tempProduct.sku}}</td>
-            <td>{{tempProduct.name}}</td>
-            <td>{{tempProduct.description}}</td>
-            <td>{{tempProduct.unitPrice | currency:'USD'}}</td>
-            <td>{{tempProduct.imageUrl}}</td>
-            <td>{{tempProduct.active}}</td>
-            <td>{{tempProduct.unitsInStock}}</td>
-            <td>{{tempProduct.dateCreated}}</td>
-            <td>{{tempProduct.lastUpdated}}</td>
+            <td class="align-middle"><img src="{{tempProduct.imageUrl}}" height="50"></td>
+            <td class="align-middle">{{tempProduct.name}}</td>
+            <td class="align-middle">{{tempProduct.unitPrice | currency:'USD'}}</td>
+            <td class="align-middle">{{tempProduct.unitsInStock}}</td>
         </tr> 
     </tbody>
 </table>
